src/libadalang/src/libadalang.h

/*
 * Data type for all nodes. Nodes are assembled to make up a tree.  See the
 * node primitives below to inspect such trees.
 *
 * Unlike for contexts and units, this type has weak-reference semantics:
 * keeping a reference to a node has no effect on the decision to keep the unit
 * that it owns allocated. This means that once all references to the context
 * and units related to a node are dropped, the context and its units are
 * deallocated and the node becomes a stale reference: most operations on it
 * will raise a ``Stale_Reference_Error``.
 *
 * Note that since reparsing an analysis unit deallocates all the nodes it
 * contains, this operation makes all reference to these nodes stale as well.
 */
typedef void* ada_base_node;
typedef uint8_t ada_bool;
        

typedef struct ada_ada_node_array_record *ada_ada_node_array;
        

typedef struct ada_param_actual_array_record *ada_param_actual_array;
        



typedef struct {
        ada_internal_metadata md;
        ada_env_rebindings_type rebindings;
        ada_bool from_rebound;
} ada_internal_entity_info;
        



typedef struct {
        ada_base_node node;
        ada_internal_entity_info info;
} ada_base_entity;
        



/*

 */
struct ada_ada_node_array_record {
   int n;
   int ref_count;
   ada_base_entity items[1];
};
        



/*

 */
struct ada_param_actual_array_record {
   int n;
   int ref_count;
   ada_internal_param_actual items[1];
};
        



/*
 * This field can contain one of the following nodes: ``ada_allocator``,
 * ``ada_attribute_ref``, ``ada_base_aggregate``, ``ada_bin_op``,
 * ``ada_call_expr``, ``ada_char_literal``, ``ada_concat_op``,
 * ``ada_cond_expr``, ``ada_decl_expr``, ``ada_dotted_name``,
 * ``ada_explicit_deref``, ``ada_identifier``, ``ada_membership_expr``,
 * ``ada_null_literal``, ``ada_num_literal``, ``ada_paren_expr``,
 * ``ada_qual_expr``, ``ada_quantified_expr``, ``ada_raise_expr``,
 * ``ada_reduce_attribute_ref``, ``ada_string_literal``, ``ada_target_name``,
 * ``ada_un_op``, ``ada_update_attribute_ref``
 */
extern int ada_attribute_def_clause_f_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes: ``ada_char_literal``,
 * ``ada_dotted_name``, ``ada_identifier``, ``ada_string_literal``
 */
extern int ada_enum_rep_clause_f_type_name(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*

 */
extern int ada_enum_rep_clause_f_aggregate(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * Returns an array of pairs, associating enum literals to representation
 * clause actuals.
 */
extern int ada_enum_rep_clause_p_params(
    ada_base_entity *node,


    ada_param_actual_array *value_p
);
        



/*
 * This field can contain one of the following nodes: ``ada_char_literal``,
 * ``ada_dotted_name``, ``ada_identifier``, ``ada_string_literal``
 */
extern int ada_record_rep_clause_f_name(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes: ``ada_allocator``,
 * ``ada_attribute_ref``, ``ada_base_aggregate``, ``ada_bin_op``,
 * ``ada_call_expr``, ``ada_char_literal``, ``ada_concat_op``,
 * ``ada_cond_expr``, ``ada_decl_expr``, ``ada_dotted_name``,
 * ``ada_explicit_deref``, ``ada_identifier``, ``ada_null_literal``,
 * ``ada_num_literal``, ``ada_paren_expr``, ``ada_qual_expr``,
 * ``ada_quantified_expr``, ``ada_raise_expr``, ``ada_reduce_attribute_ref``,
 * ``ada_string_literal``, ``ada_target_name``, ``ada_un_op``,
 * ``ada_update_attribute_ref``
 */
extern int ada_record_rep_clause_f_at_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * This field contains a list that itself contains one of the following nodes:
 * ``ada_component_clause``, ``ada_pragma_node``
 */
extern int ada_record_rep_clause_f_components(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*

 */
extern int ada_aspect_spec_f_aspect_assocs(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * Returns the expression side of this assoc node.
 */
extern int ada_base_assoc_p_assoc_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes: ``ada_allocator``,
 * ``ada_attribute_ref``, ``ada_base_aggregate``, ``ada_bin_op``,
 * ``ada_call_expr``, ``ada_char_literal``, ``ada_concat_op``,
 * ``ada_cond_expr``, ``ada_decl_expr``, ``ada_dotted_name``,
 * ``ada_explicit_deref``, ``ada_identifier``, ``ada_membership_expr``,
 * ``ada_null_literal``, ``ada_num_literal``, ``ada_others_designator``,
 * ``ada_paren_expr``, ``ada_qual_expr``, ``ada_quantified_expr``,
 * ``ada_raise_expr``, ``ada_reduce_attribute_ref``, ``ada_string_literal``,
 * ``ada_target_name``, ``ada_un_op``, ``ada_update_attribute_ref``
 */
extern int ada_contract_case_assoc_f_guard(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes: ``ada_allocator``,
 * ``ada_attribute_ref``, ``ada_base_aggregate``, ``ada_bin_op``,
 * ``ada_call_expr``, ``ada_char_literal``, ``ada_concat_op``,
 * ``ada_cond_expr``, ``ada_decl_expr``, ``ada_dotted_name``,
 * ``ada_explicit_deref``, ``ada_identifier``, ``ada_membership_expr``,
 * ``ada_null_literal``, ``ada_num_literal``, ``ada_paren_expr``,
 * ``ada_qual_expr``, ``ada_quantified_expr``, ``ada_raise_expr``,
 * ``ada_reduce_attribute_ref``, ``ada_string_literal``, ``ada_target_name``,
 * ``ada_un_op``, ``ada_update_attribute_ref``
 */
extern int ada_contract_case_assoc_f_consequence(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes: ``ada_attribute_ref``,
 * ``ada_identifier``
 */
extern int ada_pragma_argument_assoc_f_name(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes: ``ada_allocator``,
 * ``ada_attribute_ref``, ``ada_base_aggregate``, ``ada_bin_op``,
 * ``ada_call_expr``, ``ada_char_literal``, ``ada_concat_op``,
 * ``ada_cond_expr``, ``ada_decl_expr``, ``ada_dotted_name``,
 * ``ada_explicit_deref``, ``ada_identifier``, ``ada_membership_expr``,
 * ``ada_null_literal``, ``ada_num_literal``, ``ada_paren_expr``,
 * ``ada_qual_expr``, ``ada_quantified_expr``, ``ada_raise_expr``,
 * ``ada_reduce_attribute_ref``, ``ada_string_literal``, ``ada_target_name``,
 * ``ada_un_op``, ``ada_update_attribute_ref``
 */
extern int ada_pragma_argument_assoc_f_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * Return the list of abstract formal parameters for this holder.
 */
extern int ada_base_formal_param_holder_p_abstract_formal_params(
    ada_base_entity *node,


    ada_ada_node_array *value_p
);
        



/*
 * Return all parameters as a ``DefiningName`` array. This property doesn't
 * return record discriminants nor variants when called on a record component
 * list.
 */
extern int ada_base_formal_param_holder_p_formal_params(
    ada_base_entity *node,


    ada_ada_node_array *value_p
);
        



/*
 * Return the minimum number of parameters this subprogram can be called while
 * still being a legal call.
 */
extern int ada_base_formal_param_holder_p_nb_min_params(
    ada_base_entity *node,


    int *value_p
);
        



/*
 * Return the maximum number of parameters this subprogram can be called while
 * still being a legal call.
 */
extern int ada_base_formal_param_holder_p_nb_max_params(
    ada_base_entity *node,


    int *value_p
);
        



/*
 * Returns the type of each parameter of Self.
 */
extern int ada_base_formal_param_holder_p_param_types(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_ada_node_array *value_p
);
        



/*
 * Syntax property. Return the type expression node corresponding to the return
 * of this subprogram spec.
 */
extern int ada_base_subp_spec_p_returns(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * Returns the array of parameters specification for this subprogram spec.
 */
extern int ada_base_subp_spec_p_params(
    ada_base_entity *node,


    ada_ada_node_array *value_p
);
        



/*
 * Return the types of which this subprogram is a primitive of.
 */
extern int ada_base_subp_spec_p_primitive_subp_types(
    ada_base_entity *node,

        
        ada_bool
        imprecise_fallback,

    ada_ada_node_array *value_p
);
        



/*
 * Return the first type of which this subprogram is a primitive of.
 */
extern int ada_base_subp_spec_p_primitive_subp_first_type(
    ada_base_entity *node,

        
        ada_bool
        imprecise_fallback,

    ada_base_entity *value_p
);
        



/*
 * If this subprogram is a primitive for a tagged type, then return this type.
 */
extern int ada_base_subp_spec_p_primitive_subp_tagged_type(
    ada_base_entity *node,

        
        ada_bool
        imprecise_fallback,

    ada_base_entity *value_p
);